--- a/contracts/build.gradle
+++ b/contracts/build.gradle
@@ -23,4 +23,6 @@ dependencies {
 
     // Token SDK dependencies.
     cordaCompile "$tokens_release_group:tokens-contracts:$tokens_release_version"
+    cordaCompile "$tokens_release_group:tokens-money:$tokens_release_version"
+    cordaCompile "$tokens_release_group:tokens-workflows:$tokens_release_version"
 }
